src/objects/KS55_Contact_Request__c.object
<CustomObject>
    <description>&lt;This object is used to store contact request related info EKS Application.&gt;&lt;KS55&gt;&lt;12/22/2014 by Madhu&gt;&lt;NS&gt;&lt;G&gt;</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>&lt;This field is used to create a master detail relationship between Account Request and Contact Request..&gt;&lt;KS55&gt;&lt;01/01/2015 by Madhu&gt;&lt;NS&gt;&lt;G&gt;</description>
        <inlineHelpText>This field is used to store related account request.</inlineHelpText>
        <label>Account Request</label>
        <referenceTo>KS55_Account_Request__c</referenceTo>
        <relationshipLabel>Contact Requests</relationshipLabel>
        <relationshipName>Contact_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the KS55 Approver</description>
        <inlineHelpText>This field helps to track the KS55 Approver for the contact requests.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Units__c</fullName>
        <description>This field describes the business unit of Contact requestor.</description>
        <inlineHelpText>This field helps to track the business unit of Contact requestor.</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Beef</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poultry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protein Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_To_Have_Access_Email_Address__c</fullName>
        <description>This field describes the email address of the contact who has access to associated account requestor.</description>
        <inlineHelpText>Please provide this person&apos;s email address.</inlineHelpText>
        <label>Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_To_Have_Access_Role__c</fullName>
        <description>This field describes the role of the contact who has access to associated account requestor.</description>
        <inlineHelpText>Please provide this person&apos;s responsibility related to this account.</inlineHelpText>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Complex Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Submitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDAS Internal User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EKS Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elanco Dairy Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elanco RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elanco RSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elanco Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elanco TC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elanco TC Submitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDS Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDS Enhanced User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDS Internal User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDS User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flock Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herd Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTSi Data Requester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Route Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedona RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedona TC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_To_Have_Access_Tool__c</fullName>
        <description>This field describes the tool of the contact who has access to associated account requestor.</description>
        <inlineHelpText>Please select the Elanco Knowledge Solution tools needed for this person.</inlineHelpText>
        <label>Contact Tool</label>
        <picklist>
            <controllingField>Business_Units__c</controllingField>
            <picklistValues>
                <fullName>Adams Land &amp; Cattle Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assurance Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attrition Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attrition Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benchmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benchmark Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Agonist Calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boulevard: The Cutting Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakeven Calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakeven Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cargill Upper Midwest?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certamark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close-out summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closeout Summary Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA Feedyard Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA Industry Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA Packer Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom: Packer benchmark tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom: Smithfield tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy Data Access System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days on Feed Calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOF calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empty Bodyfat Calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETAMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feed Decision System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fit Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FVP data extract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAPP--user input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAPP--web reporting</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Documentation_Date_Expire__c</fullName>
        <description>This field is used to display documentation expire date in list view</description>
        <formula>Account_Name__r.Documentation_Date_Expire__c</formula>
        <label>Documentation Date Expire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documentation_Date_Signed__c</fullName>
        <description>This field is used to display documentation signed date in list view</description>
        <formula>Account_Name__r.Documentation_Date_Signed__c</formula>
        <label>Documentation Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Page_Url__c</fullName>
        <description>This field stores the URL of the salesforce homepage for aKSess application</description>
        <formula>LEFT($Api.Enterprise_Server_URL_320, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_320))+&apos;/home/home.jsp&apos;</formula>
        <label>Home Page Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub__c</fullName>
        <description>This field describes the hub of the contact who has access to associated account requestor. This field gets populated from parent Account requestor hub.</description>
        <formula>TEXT(Account_Name__r.Hub__c)</formula>
        <inlineHelpText>This field helps to track the hub of the contact who has access to associated account requestor.</inlineHelpText>
        <label>Hub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Approver_Logged_In_User__c</fullName>
        <description>This formula field is used to check if the logged in user is the Approver for that submitted request.</description>
        <formula>Approver__r.Id ==  $User.Id</formula>
        <label>Is Approver Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Created_By_logged_in_user__c</fullName>
        <description>This formula field is used to check if the request created by the logged in user.</description>
        <formula>CreatedBy.Id ==  $User.Id</formula>
        <label>Is Created By logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Operations_Logged_In_User__c</fullName>
        <description>This formula field is used to check if the logged in user is the Eks operation for that submitted request.</description>
        <formula>Operations__r.Id == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Operations Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Request_Created_By_Logged_In_User__c</fullName>
        <description>This formula field is used to check if the request created by the logged in user or if the contact request emailId is equal to logged in user emailId</description>
        <formula>OR(CreatedById    ==  $User.Id, Contact_To_Have_Access_Email_Address__c == $User.Email)</formula>
        <label>Is Request Created By Logged In User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the details of EKS Operations team who will process the contact request.</description>
        <inlineHelpText>This field helps to track the details of EKS Operations team who will process the contact request.</inlineHelpText>
        <label>Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This Field is used to track the status of approval request. Status-&apos;Open&apos; implies approval request has been sent to KS55 Approver. &apos;Approved&apos; implies approval has been accepted by KS55 Approver . &apos;Rejected&apos; implies approval has been rejected due to some issues. &apos; Completed&apos; Implies KS55 Operations has added Account request to EKS External Web App.</description>
        <inlineHelpText>This Field is used to track the status of contact request.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_TF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to check if request is submitted for approval or not.</description>
        <inlineHelpText>This field is to check if request is submitted for approval or not.</inlineHelpText>
        <label>Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Using_Custom_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Using Custom Approval</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Request</label>
    <listViews>
        <fullName>All_Requests</fullName>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Unit_Beef</fullName>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Units__c</field>
            <operation>equals</operation>
            <value>Beef</value>
        </filters>
        <filters>
            <field>Is_Created_By_logged_in_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Business Unit - Beef</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
            <group>KS55_Requestors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Unit_Dairy</fullName>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Units__c</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </filters>
        <filters>
            <field>Is_Created_By_logged_in_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Business Unit - Dairy</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
            <group>KS55_Requestors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Unit_Poultry</fullName>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Units__c</field>
            <operation>equals</operation>
            <value>Poultry</value>
        </filters>
        <filters>
            <field>Is_Created_By_logged_in_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Business Unit - Poultry</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
            <group>KS55_Requestors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Unit_Processing</fullName>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Units__c</field>
            <operation>equals</operation>
            <value>Protein Processing</value>
        </filters>
        <filters>
            <field>Is_Created_By_logged_in_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Business Unit - Processing</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
            <group>KS55_Requestors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Unit_Swine</fullName>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Units__c</field>
            <operation>equals</operation>
            <value>Swine</value>
        </filters>
        <filters>
            <field>Is_Created_By_logged_in_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Business Unit - Swine</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
            <group>KS55_Requestors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Items_Approved</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Approver_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Submitted_TF__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Items Approved</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Items_Completed</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Operations_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Submitted_TF__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Items Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_EKS_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Items_Rejected</fullName>
        <booleanFilter>(1 OR 4 ) AND (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Approver_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>Submitted_TF__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Is_Operations_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Items Rejected</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Items_To_Approve</fullName>
        <booleanFilter>(1 AND 2 AND 5) OR (3 AND 4 AND 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Approver_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Is_Operations_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Submitted_TF__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Items To Approve</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Request_Created_By_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
            <group>KS55_Requestors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Requests_Approved</fullName>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Submitted_TF__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Is_Request_Created_By_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Requests - Approved</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
            <group>KS55_Requestors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Requests_Completed</fullName>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Submitted_TF__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Is_Request_Created_By_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Requests - Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
            <group>KS55_Requestors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Requests_Not_Submitted</fullName>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Submitted_TF__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Is_Request_Created_By_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Requests - Not Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
            <group>KS55_Requestors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Requests_Rejected</fullName>
        <columns>NAME</columns>
        <columns>Contact_To_Have_Access_Email_Address__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Documentation_Date_Signed__c</columns>
        <columns>Documentation_Date_Expire__c</columns>
        <columns>Business_Units__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>Submitted_TF__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Is_Request_Created_By_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Requests - Rejected</label>
        <language>en_US</language>
        <sharedTo>
            <group>KS55_App_Admin</group>
            <group>KS55_Approvers</group>
            <group>KS55_EKS_Operations</group>
            <group>KS55_Requestors</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>KS55_Same_Business_Unit_As_Parent</fullName>
        <active>true</active>
        <description>This validation rule is used to validate if parent account request&apos;s BU is same BU of current contact request record.</description>
        <errorConditionFormula>IF(TEXT(Account_Name__r.Business_Unit__c)=TEXT(Business_Units__c),false,true)</errorConditionFormula>
        <errorDisplayField>Business_Units__c</errorDisplayField>
        <errorMessage>Please enter a Business Unit same as parent Account Request&apos;s Business Unit.</errorMessage>
    </validationRules>
</CustomObject>